# EthereumBridge

./: .dockerignore  GetStarted.md  Makefile  docker-compose_example.yaml  requirements.txt
.github/workflows/: codeql-analysis.yml
config/: local_config.json  mainnet_config.json  plasm_config.json  testnet_config.json
deployment/: deploy.py  swap_cosmos.py
deployment/dockerfiles/: bridge.Dockerfile
deployment/eth/: deploy_eth.py
deployment/scrt/: add_tokens.py  deploy_testnet.py
src/: bridge.py
src/base/: __init__.py  common.py  db.py  entities.py
src/contracts/ethereum/: erc20.py  ethr_contract.py  event_listener.py  multisig_wallet.py
src/contracts/secret/: script.sh  secret_contract.py
src/contracts/terra/: secret_contract.py
src/contracts/terra/bridge-contract/: .gitignore  Cargo.toml
src/contracts/terra/bridge-contract/src/: contract.rs  lib.rs  msg.rs  secret.rs  state.rs  token_messages.rs
src/cosmos_hub/: __init__.py  egress_leader.py  egress_signer.py  gaia.py  ingress_leader.py  ingress_signer.py
src/db/collections/: __init__.py  commands.py  eth_signatures.py  eth_swap.py  scrt_retry.py  signatures.py  token_map.py  (+2 more)
src/ethereum/: __init__.py  egress_leader.py  egress_signer.py  ingress_leader.py  ingress_signer.py
src/terra/: egress_leader.py  egress_signer.py  ingress_leader.py  ingress_signer.py
src/util/: coins.py  common.py  config.py  gaia.py  health_check.py  logger.py  secretcli.py  web3.py
tests/: config.py  conftest.py
tests/integration/: conftest.py
tests/unit/: test_coins.py  test_oracle.py  test_tx_sender.py
(+30 files in other folders)
